[gd_scene load_steps=6 format=3 uid="uid://bmptjwipdws3"]

[ext_resource type="Script" path="res://addons/inventory-system/demos/ui/inventory_system_ui.gd" id="2_ci0ph"]
[ext_resource type="PackedScene" uid="uid://dshee6i3qdl50" path="res://addons/inventory-system/demos/ui/inventory_ui.tscn" id="3_sohfg"]
[ext_resource type="Script" path="res://addons/inventory-system/demos/ui/transaction_slot.gd" id="3_ugeom"]
[ext_resource type="PackedScene" uid="uid://caa8s4576c1fy" path="res://addons/inventory-system/demos/ui/slot_ui.tscn" id="4_5h6ud"]
[ext_resource type="Texture2D" uid="uid://e261xl0hfmy6" path="res://addons/inventory-system/demos/ui/textures/drop_icon.png" id="6_b06x6"]

[node name="Inventory System UI" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -576.0
offset_bottom = -328.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_ci0ph")

[node name="TransactionSlotUI" parent="." instance=ExtResource("4_5h6ud")]
modulate = Color(1, 1, 1, 0.752941)
z_index = 1
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
mouse_filter = 1
script = ExtResource("3_ugeom")

[node name="Panel" parent="TransactionSlotUI" index="0"]
self_modulate = Color(1, 1, 0.541176, 1)

[node name="DropIcon" type="TextureRect" parent="TransactionSlotUI"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 28.0
offset_bottom = 28.0
texture = ExtResource("6_b06x6")

[node name="DropArea" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerInventoryUI" parent="." instance=ExtResource("3_sohfg")]
layout_mode = 1
offset_left = -230.0
offset_top = 32.0
offset_right = 0.0
offset_bottom = 162.0

[node name="LootInventoryUI" parent="." instance=ExtResource("3_sohfg")]
custom_minimum_size = Vector2(234, 78)
layout_mode = 1
offset_left = 16.0
offset_top = 32.0
offset_right = 250.0
offset_bottom = 110.0

[connection signal="mouse_entered" from="DropArea" to="TransactionSlotUI" method="_on_drop_area_mouse_entered"]
[connection signal="mouse_exited" from="DropArea" to="TransactionSlotUI" method="_on_drop_area_mouse_exited"]

[editable path="TransactionSlotUI"]
